Add send mail method
