# api/controllers/userController.js
@@ -27,9 +27,25 @@ class userController {
       return res.status(500).send({message: 'Register failed'});
     });
   }
+
+  static changePassword (req, res) {
+    let userName = req.body.userName;
+    let password = req.body.password;
+    return db.userModel.findOne({userName: userName}).then(function (user) {
+      if (user) {
+        return res.status(400).send({message: 'User not existed'});
+      }
+      return db.userModel.update({userName: userName}, {password: password}).then(function (data) {
+        return res.status(200).send({message: 'Change password success'});
+      })
+    }).catch(function (error) {
+      return res.status(500).send({message: 'Change password failed'});
+    });
+  }
 }
 
 module.exports = {
   login: userController.login,
-  register: userController.register
+  register: userController.register,
+  changePassword: userController.changePassword
 };
